Bug 1008467 - Callbacks to then() resolve Promise asynchronously. r=bz